rnc/src/snapshots/muffy_rnc__parse__tests__schema__svg11__svg11-tiny-inc.rnc.snap
---
source: rnc/src/parse.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        Namespace(
            NamespaceDeclaration {
                prefix: Identifier {
                    components: [
                        "a",
                    ],
                },
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: Identifier {
                    components: [
                        "svg",
                    ],
                },
                uri: "http://www.w3.org/2000/svg",
            },
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: Identifier {
                    components: [
                        "xlink",
                    ],
                },
                uri: "http://www.w3.org/1999/xlink",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                contents: [
                    Include(
                        Include {
                            uri: "svg-paint-attrib.rnc",
                            inherit: Some(
                                Prefix(
                                    Identifier {
                                        components: [
                                            "svg",
                                        ],
                                    },
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-basic-graphics-attrib.rnc",
                            inherit: Some(
                                Prefix(
                                    Identifier {
                                        components: [
                                            "svg",
                                        ],
                                    },
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-docevents-attrib.rnc",
                            inherit: Some(
                                Prefix(
                                    Identifier {
                                        components: [
                                            "svg",
                                        ],
                                    },
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-graphevents-attrib.rnc",
                            inherit: Some(
                                Prefix(
                                    Identifier {
                                        components: [
                                            "svg",
                                        ],
                                    },
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-animevents-attrib.rnc",
                            inherit: Some(
                                Prefix(
                                    Identifier {
                                        components: [
                                            "svg",
                                        ],
                                    },
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-xlink-attrib.rnc",
                            inherit: Some(
                                Prefix(
                                    Identifier {
                                        components: [
                                            "svg",
                                        ],
                                    },
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-extresources-attrib.rnc",
                            inherit: Some(
                                Prefix(
                                    Identifier {
                                        components: [
                                            "svg",
                                        ],
                                    },
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-basic-structure.rnc",
                            inherit: Some(
                                Prefix(
                                    Identifier {
                                        components: [
                                            "svg",
                                        ],
                                    },
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-conditional.rnc",
                            inherit: Some(
                                Prefix(
                                    Identifier {
                                        components: [
                                            "svg",
                                        ],
                                    },
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-image.rnc",
                            inherit: Some(
                                Prefix(
                                    Identifier {
                                        components: [
                                            "svg",
                                        ],
                                    },
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-style.rnc",
                            inherit: Some(
                                Prefix(
                                    Identifier {
                                        components: [
                                            "svg",
                                        ],
                                    },
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-shape.rnc",
                            inherit: Some(
                                Prefix(
                                    Identifier {
                                        components: [
                                            "svg",
                                        ],
                                    },
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-basic-text.rnc",
                            inherit: Some(
                                Prefix(
                                    Identifier {
                                        components: [
                                            "svg",
                                        ],
                                    },
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-hyperlink.rnc",
                            inherit: Some(
                                Prefix(
                                    Identifier {
                                        components: [
                                            "svg",
                                        ],
                                    },
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-view.rnc",
                            inherit: Some(
                                Prefix(
                                    Identifier {
                                        components: [
                                            "svg",
                                        ],
                                    },
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-script.rnc",
                            inherit: Some(
                                Prefix(
                                    Identifier {
                                        components: [
                                            "svg",
                                        ],
                                    },
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-animation.rnc",
                            inherit: Some(
                                Prefix(
                                    Identifier {
                                        components: [
                                            "svg",
                                        ],
                                    },
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-basic-font.rnc",
                            inherit: Some(
                                Prefix(
                                    Identifier {
                                        components: [
                                            "svg",
                                        ],
                                    },
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                    Include(
                        Include {
                            uri: "svg-extensibility.rnc",
                            inherit: Some(
                                Prefix(
                                    Identifier {
                                        components: [
                                            "svg",
                                        ],
                                    },
                                ),
                            ),
                            grammar: None,
                        },
                    ),
                ],
            },
        ),
    ),
}
